--- a/kotlin-blog/public/login.html
+++ b/kotlin-blog/public/login.html
@@ -1,41 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Login</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Login</title>
     <link rel="stylesheet" href="/src/css/style.css">
-    <script type="module" src="/src/js/login.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
+    <script type="module" src="/src/js/login.js" defer></script>
 </head>
-<body class="bg-gray-900 text-white min-h-screen flex items-center justify-center">
-    <div class="bg-gray-800 shadow-lg rounded-lg border border-gray-700 p-6 flex flex-col justify-between w-[50vw] h-[50vh]">
-        <h1 class="text-2xl font-bold text-center text-blue-400">Admin Login</h1>
-        <form id="login-form" class="space-y-4">
+<body class="bg-gray-900 text-white min-h-screen w-full flex items-center justify-center p-4">
+    <!-- Login Card -->
+    <div class="bg-gray-800 shadow-xl rounded-2xl border border-gray-700 p-10 flex flex-col items-center w-full max-w-2xl mx-auto">
+        <!-- Logo or Icon -->
+        <div class="mb-6">
+            <i class="fas fa-user-circle text-blue-400 text-7xl"></i>
+        </div>
+        <!-- Heading -->
+        <h1 class="text-2xl font-bold text-center text-white mb-6">Admin Login</h1>
+        <!-- Login Form -->
+        <form id="login-form" class="w-full space-y-6">
+            <!-- Email Field -->
             <div>
-                <label for="email" class="block text-blue-300 font-medium">Email:</label>
+                <label for="email" class="block text-sm text-blue-300 font-medium mb-2">Email</label>
                 <input
                     type="email"
                     id="email"
-                    style="background-color: #e5e7eb; color: #000;"
-                    class="w-full p-2 rounded-md bg-white text-black border border-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
+                    placeholder="Enter your email"
+                    class="w-full p-4 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
                     required
                 />
             </div>
-            <div>
-                <label for="password" class="block text-blue-300 font-medium">Password:</label>
-                <input
-                    type="password"
-                    id="password"
-                    style="background-color: #e5e7eb; color: #000;"
-                    class="w-full p-2 rounded-md bg-white text-black border border-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
-                    required
-                />
+            <!-- Password Field -->
+            <div class="relative">
+                <label for="password" class="block text-sm text-blue-300 font-medium mb-2">Password</label>
+                <div class="relative w-full">
+                    <input
+                        type="password"
+                        id="password"
+                        placeholder="Enter your password"
+                        class="w-full p-4 pr-12 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
+                        required
+                    />
+                    <button
+                        type="button"
+                        class="absolute right-3 top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-400"
+                        id="toggle-password"
+                    >
+                        <i class="fas fa-eye"></i>
+                    </button>
+                </div>
             </div>
+            <!-- Submit Button -->
             <button
                 type="submit"
-                class="w-full bg-blue-500 text-white font-medium py-2 rounded-md hover:bg-blue-600 transition-colors"
+                class="w-full bg-blue-500 text-white font-medium py-3 rounded-lg hover:bg-blue-600 transition-colors"
             >
                 Login
             </button>
         </form>
+        
     </div>
+
+    <!-- Toggle Password Visibility Script -->
+    <script>
+        const passwordInput = document.getElementById('password');
+        const togglePassword = document.getElementById('toggle-password');
+        const togglePasswordIcon = togglePassword.querySelector('i');
+
+        togglePassword.addEventListener('click', () => {
+            const isPasswordVisible = passwordInput.type === 'text';
+            passwordInput.type = isPasswordVisible ? 'password' : 'text';
+
+            // Change the icon
+            togglePasswordIcon.classList.toggle('fa-eye-slash', !isPasswordVisible);
+            togglePasswordIcon.classList.toggle('fa-eye', isPasswordVisible);
+        });
+    </script>
+</body>
+
 </body>
 </html>
